--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -726,8 +726,9 @@ section {
 
 .portfolio .portfolio-wrap .portfolio-info p {
   color: #45505b;
-  font-size: 14px;
-  text-transform: uppercase;
+  font-size: 1em;
+  letter-spacing: 0.025em;
+  word-spacing: 0.3em;
   padding: 0;
   margin: 0;
 }
